# tmux-browse-agent

./: CHANGELOG.md  README.md  manifest.json  pyproject.toml  startup.py  ui_blocks.html
.github/workflows/: ci.yml
agent/: __init__.py  budgets.py  cli_detect.py  cli_hooks.py  cli_launch.py  cli_registry.py  conductor.py  conversations.py  core_api.py  costs.py  hooks.py  kb.py  logs.py  providers.py  repl_context.py  run_index.py  runner.py  runs.py  runtime.py  scheduler.py  scheduler_lock.py  status.py  store.py  tool_registry.py  workflow_runs.py  workflows.py  worktrees.py
agent/modes/: __init__.py  cycle.py  work.py
server/: routes.py
static/: agents.js  cli-agents.js  runs.js  tasks.js
tb_cmds/: agent.py
tests/: test_agent_budgets.py  test_agent_conductor.py  test_agent_conversations.py  test_agent_costs.py  test_agent_hooks.py  test_agent_kb.py  test_agent_logs.py  test_agent_mode_cycle.py  test_agent_mode_work.py  test_agent_providers.py  test_agent_repl_context.py  test_agent_run_index.py  test_agent_runner.py  test_agent_runs.py  test_agent_runtime.py  test_agent_scheduler.py  test_agent_scheduler_lock.py  test_agent_status.py  test_agent_store.py  test_agent_tool_registry.py  test_agent_workflow_runs.py  test_agent_workflows.py  test_cli_detect.py  test_cli_hooks.py  test_cli_launch.py  test_cli_registry.py  test_cli_status.py  test_config_lock_agent_endpoints.py  test_server_agents.py  test_server_cli.py  test_tb_cmd_agent.py  test_worktrees.py
